Replace player prompting with buttons
Get the player's choice by providing buttons to click and choose

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="./script.js" defer></script> 
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <h1>Rock Paper Scissors</h1>
-   <script src="./script.js"></script> 
+    <h1>Play</h1>
+
+	<div class="container">
+		<button id="rock">ROCK</button>
+		<button id="paper">PAPER</button>
+		<button id="scissors">SCISSORS</button>
+	</div>
 </body>
 </html>
