Display round result
Add elements to display the result of a round

--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 <body>
     <h1>Play</h1>
 
-	<div class="container">
+	<div class="button-container">
 		<button id="rock">ROCK</button>
 		<button id="paper">PAPER</button>
 		<button id="scissors">SCISSORS</button>
+	</div>
+
+	<div class="display-container">
+		<p class="player-choice">PLAYER'S CHOICE:</p>
+		<p class="computer-choice">COMPUTER'S CHOICE:</p>
+		<p class="round-winner"></p>
 	</div>
 </body>
 </html>
