Display running score and game winner
Add elements to display the running score and display the game winner

--- a/index.html
+++ b/index.html
@@ -20,5 +20,14 @@
 		<p class="computer-choice">COMPUTER'S CHOICE:</p>
 		<p class="round-winner"></p>
 	</div>
+	
+	<div class="score-container">
+		<p class="player-score">PLAYER SCORE:</p>
+		<p class="computer-score">COMPUTER SCORE:</p>
+	</div>
+
+	<div class="game-message-container">
+		<p class="game-message"></p>
+	</div>
 </body>
 </html>
